--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -1,6 +1,6 @@
 <!-- first section - Home -->
-<material-content>
-    <ul rn-carousel rn-carousel-indicator="" rn-carousel-control="">
+<material-content layout="vertical" layout-fill>
+    <ul rn-carousel rn-carousel-control="" style="width:100%;">
         <!--ng-style="{backgroundImage : 'url(images/carousel/fond' +$index+ '.png)'}"-->
         <li class="list-carousel-challenge" ng-repeat="challenge in challenges" >
 
