--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -30,7 +30,7 @@ body,html{
   overflow-y : hidden !important;
   height: 100%;
   max-width: 100%;
-  font-family: 'Fira Sans';
+  font-family: 'Fira Sans' !important;
 }
 
 .main-header{
