--- a/client/app/modules/challenge/templates/challenges.tpl.html
+++ b/client/app/modules/challenge/templates/challenges.tpl.html
@@ -1,30 +1,16 @@
-<section layout="horizontal" layout-fill>
-    <material-sidenav class="material-sidenav-left material-whiteframe-z2 left" component-id="left">
-        <material-toolbar layout="horizontal">
-            <div class="material-toolbar-tools">
-                <i class="fa fa-caret-left fa-2x my-btn" hide-md style="color:black;" ng-click="toggle()" flex></i>
-                <div>
-                    <i class="fa fa-tags"> Tags</i>
-                </div>
-            </div>
-        </material-toolbar>
-        <material-content layout="vertical" >
-            <div layout="horizontal" ng-repeat="tag in tags">
-                <material-button flex class="material-button-hover" ui-route="/challenges/{{tag.title}}" ng-class="{ 'material-button-raised' : $uiRoute }"  ui-sref="challenges.list({ tag : tag.title })">{{tag.title}}</material-button>
-            </div>
-        </material-content>
-    </material-sidenav>
-    <section layout="vertical" style="width:100%;">
-        <material-toolbar scroll-shrink class="material-theme-indigo" layout="vertical" style="position:relative;z-index:10;">
-            <div class="center">
-                Challenges
-            </div>
-            <material-button class="material-button-fab material-button-fab-bottom-right material-theme-indigo" ui-sref="challengeSuggest" ng-if="currentUser" style="color:black;bottom:-24px;position:absolute; right:20px;z-index : inherit">
-                <i class="fa fa-plus" style="font-size: 1.2em; top:3px;position:relative;z-index: 50"></i>
-            </material-button>
-        </material-toolbar>
-        <material-content>
-            <section ui-view="challengesView"></section>
-        </material-content>
-    </section>
+<section layout="vertical" style="width:100%;">
+    <material-toolbar scroll-shrink class="material-theme-indigo" layout="vertical" style="position:relative;z-index:10;">
+        <div class="center">
+            Challenges
+        </div>
+        <material-button class="material-button-fab material-theme-indigo" ng-click="toggleLeft()" style="color:black;bottom:-24px;position:absolute; left :20px;z-index : inherit" hide-md>
+            <i class="fa fa-bars" style="font-size: 1.2em; top:3px;position:relative;z-index: 50"></i>
+        </material-button>
+        <material-button class="material-button-fab material-button-fab-bottom-right material-theme-indigo" ui-sref="challengeSuggest" ng-if="currentUser" style="color:black;bottom:-24px;position:absolute; right:20px;z-index : inherit">
+            <i class="fa fa-plus" style="font-size: 1.2em; top:3px;position:relative;z-index: 50"></i>
+        </material-button>
+    </material-toolbar>
+    <material-content>
+        <section ui-view="challengesView"></section>
+    </material-content>
 </section>
