--- a/client/app/modules/header/templates/menu.tpl.html
+++ b/client/app/modules/header/templates/menu.tpl.html
@@ -27,7 +27,7 @@
         <material-button ui-sref="challenges.list({ tag : 'all' })" ng-class="{'material-theme-indigo':$uiRoute}" ui-route="/challenges/[a-z]*">
             Challenges
         </material-button>
-        <material-button ui-sref="projects.list({ tag : 'all' })" ng-class="{'material-theme-light-blue':$uiRoute}" ui-route="/projects/all">
+        <material-button ui-sref="projects.list({ tag : 'all' })" ng-class="{'material-theme-light':$uiRoute}" ui-route="/projects/all">
             Projects
         </material-button>
         <material-button ui-sref="profileAdmin({ uid : currentUser._id })"  ng-class="{'material-theme-green':$uiRoute}" ui-route="/admin/profile/{{ currentUser._id }}">
