--- a/client/app/modules/common/sass/media-queries.scss
+++ b/client/app/modules/common/sass/media-queries.scss
@@ -13,7 +13,7 @@
   }
 
   .right-part{
-    margin-left : 20px;
+//    margin-left : 20px;
   }
 
   .carousel-body {
@@ -21,7 +21,6 @@
   }
   material-card{
     width: 180px;
-
   }
   material-dialog{
     width:60%;
