--- a/client/app/modules/workspace/comments/templates/comments.tpl.html
+++ b/client/app/modules/workspace/comments/templates/comments.tpl.html
@@ -20,7 +20,7 @@
                 <div class="material-tile-content" flex>
                     <section layout="horizontal">
                         <div ng-bind-html="comment.displayText" flex></div>
-                        <span class="text-muted">{{comment.createDate|timeago}}</span>
+                        <span class="text-muted">{{comment.createDate}}</span>
                     </section>
                     <section layout="horizontal" layout-align="start center">
                         <div flex>
