--- a/client/app/modules/challenge/templates/challenges-list.tpl.html
+++ b/client/app/modules/challenge/templates/challenges-list.tpl.html
@@ -6,7 +6,7 @@
                     <img ng-src="{{ challenge.poster || 'http://placehold.it/90x90' }}" class="" width="100%" alt="challenge's poster" />
                 </div>
                 <article class="material-tile-content">
-                    <h1 ui-sref="challenge({ pid : challenge.accessUrl })">
+                    <h1 ui-sref="challenge({ cid : challenge.accessUrl })">
                         {{ challenge.title }}
                     </h1>
                     <showtags entity="challenge"></showtags>
