--- a/client/app/modules/common/sass/common.scss
+++ b/client/app/modules/common/sass/common.scss
@@ -27,20 +27,36 @@
   display : inline-block;
   margin-right : 15px;
   width:100%;
-  .item-block{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    background-color: rgba(160, 166, 161, 0.40);
+  &:hover{
+    opacity:0.8;
   }
-  .ng-enter{
-    @extend .challenge-block-container;
-    -webkit-animation: fadeInDown 0.3s ease-in-out;
-    animation: fadeInDown 0.3s ease-in-out;
-  }
-  .ng-leave{
-    @extend .challenge-block-container;
-    -webkit-animation: fadeOutUp 0.3s ease-in-out;
-    animation: fadeOutUp 0.3s ease-in-out; }
+//  .item-block{
+//    position:absolute;
+//    top:0;
+//    left:0;
+//    width:100%;
+//    background-color: rgba(160, 166, 161, 0.40);
+//  }
+//  .ng-enter{
+//    @extend .challenge-block-container;
+//    -webkit-animation: fadeInDown 0.3s ease-in-out;
+//    animation: fadeInDown 0.3s ease-in-out;
+//  }
+//  .ng-leave{
+//    @extend .challenge-block-container;
+//    -webkit-animation: fadeOutUp 0.3s ease-in-out;
+//    animation: fadeOutUp 0.3s ease-in-out; }
+}
+
+*::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
 }
